# drop-your-time

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
backend/: .dockerignore  .ocamlformat  Makefile  backend.opam  backend.opam.locked  dune-project
backend/lib/: crud.ml  dune  models.ml  rest.ml  schemes.ml
backend/test/: dune  test_backend.ml
frontend/: .dockerignore  Makefile  deps.edn  package-lock.json  package.json  shadow-cljs.edn
frontend/resources/public/: index.html
frontend/src/drop_your_time/: conf.cljs  i18n.cljs  misc.cljs  router.cljs  service.cljs
frontend/src/drop_your_time/components/: general.cljs  poll.cljs
frontend/src/drop_your_time/models/: poll.cljs
frontend/src/drop_your_time/screens/: home.cljs  new_poll_confirm.cljs  new_poll_header.cljs  new_poll_time_slots.cljs  not_found.cljs  poll_vote.cljs
